# protobuf-cmake-example

./: CMakeLists.txt
proto/: CMakeLists.txt  test.proto
src/: reader.cpp  writter.cpp
