# 前两条语句必须要加，否则系统根本就不知道PROTOBUF_GENERATE_CPP这个指令是啥意思
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})

PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER test.proto)

Message(${PROTO_SRC})
Message(${PROTO_HEADER})

ADD_LIBRARY(proto ${PROTO_SRC})
TARGET_LINK_LIBRARIES(proto ${PROTOBUF_LIBRARIES})